# spacetime-bindings-macro-input

./: Cargo.toml  README.md  build.cmd  build.sh
.github/actions/verify-crate-availability/: action.yml
.github/workflows/: codeql.yml  release.yml  test.yml
example/: Cargo.toml
example/macros/: Cargo.toml
example/macros/src/: lib.rs
example/src/: lib.rs  main.rs
original/bindings-macro/: LICENSE  README.md
src/: lib.rs  sats.rs  sym.rs  table.rs
